[package]
name = "advent-of-code-2023"
version = "0.1.0"
edition = "2021"

[lib]
name = "macros"
proc-macro = true
path = "src/macro.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
phf = { version = "0.11.2", features = ["macros"] }
proc-macro2 = "1.0.70"
quote = "1.0.33"
serde = "1.0.193"
serde_derive = "1.0.193"
serde_json = "1.0.108"
syn = "2.0.39"
