[package]
name = "advent-of-code-2023"
version = "0.1.0"
edition = "2021"

[lib]
name = "macros"
proc-macro = true
path = "src/macro.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
arrayvec = "0.7.4"
clap = { version = "4.4.10", features = ["derive"] }
itertools = "0.12.0"
lazy_static = "1.4.0"
phf = { version = "0.11.2", features = ["macros"] }
prettytable-rs = "0.10.0"
proc-macro2 = "1.0.70"
quote = "1.0.33"
slab_tree = "0.3.2"
syn = "2.0.39"
